--- a/Weather_forecast/package.json
+++ b/Weather_forecast/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "google-map-react": "^2.1.9",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "react": "^17.0.1",
@@ -21,8 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "npx json-server --watch public/db.json --port=3001"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
